--- a/GuidingPrinciplesForRegression.ipynb
+++ b/GuidingPrinciplesForRegression.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Outline for class and goals\n",
     "\n",
-    "Regression models aim to estimate $p(y|x)$, the probability distribution over a target variable $y$ given a set of covariates $x$.\n",
-    "The majority of regression models assume $y$ depends on $x$ through a function $f$ so that the goal is to estimate $p(y=f(x)|x)$.\n",
-    "Different statistical or machine-learning (**S & ML**) techniques are all trying to estimate the same conditional probability distribution. \n",
+    "Regression models aim to estimate the probability distribution over a target variable $y$ given a set of covariates $x$.\n",
+    "Most regression models assume $y$ is a function of $x$ so that the goal is to estimate $p(y=f(x))$.\n",
+    "Different statistical or machine-learning (**S & ML**) techniques attempt to estimate this same conditional probability distribution.\n",
     "\n",
     "To understand any S & ML method it is important to know: (i) the training data, (ii) assumptions the model makes, (iii) how the model makes predictions, and (iv) learns from data. \n",
     "S & ML methods become more approachable if you can understand these four concepts.\n",
@@ -18,7 +18,7 @@
     "\n",
     "Linear regression (**LR**) will be the first model introduced.\n",
     "We will explore two ways of specifying a linear regression, model assumptions, and how LR learns from data by minimizing an objective function called the sum squares error.\n",
-    "An LR model will be fit to a training set and used to make predictions.\n",
+    "An example LR model will be fit to a training set and used to make predictions.\n",
     "Our approach to K-nearest neighbors (**KNN**) regression will be similar.\n",
     "We will define the model and how it predicts a target variable $y$ given $X$ data, explore an example data set, and understand how a KNN model learns from training data. \n",
     "\n",
@@ -336,13 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f19545cc5f4978ae9e7371277d9a5e",
+       "model_id": "fb74f2468bf3444fbbf6427606b1de59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,7 +359,7 @@
        "<function __main__.LRandSSE(slopeB1)>"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
