--- a/GuidingPrinciplesForRegression.ipynb
+++ b/GuidingPrinciplesForRegression.ipynb
@@ -6,25 +6,11 @@
    "source": [
     "# Outline for class and goals\n",
     "\n",
-    "Regression models aim to estimate the probability distribution over a target variable $y$ given a set of covariates $x$.\n",
-    "Most regression models assume $y$ is a function of $x$ so that the goal is to estimate $p(y=f(x))$.\n",
-    "Different statistical or machine-learning (**S & ML**) techniques attempt to estimate this same conditional probability distribution.\n",
+    "The goal of most regression methods is to estimate a target variable (y) given a set of fixed training data (X). Though statistical models specify different functional relationships between X and y, the goal is still to estimate p(y|X). \n",
     "\n",
-    "To understand any S & ML method it is important to know: (i) the training data, (ii) assumptions the model makes, (iii) how the model makes predictions, and (iv) learns from data. \n",
-    "S & ML methods become more approachable if you can understand these four concepts.\n",
+    "We will follow a series of steps that will help you understand regression models. Two  regression models will serve as an example: Linear regression (**LR**) and K-nearest neighbors (**KNN**) regression. We will explore the assumptions they make, how they make predictions, and how they learn from training data. \n",
     "\n",
-    "The training data is composed of a target variable $y$ we want to predict and $X$ covariates we can use to help prediction. \n",
-    "The same training data structure will be used to explore two regression methods: linear regression and K-nearest neighbors regression.\n",
-    "\n",
-    "Linear regression (**LR**) will be the first model introduced.\n",
-    "We will explore two ways of specifying a linear regression, model assumptions, and how LR learns from data by minimizing an objective function called the sum squares error.\n",
-    "An example LR model will be fit to a training set and used to make predictions.\n",
-    "Our approach to K-nearest neighbors (**KNN**) regression will be similar.\n",
-    "We will define the model and how it predicts a target variable $y$ given $X$ data, explore an example data set, and understand how a KNN model learns from training data. \n",
-    "\n",
-    "In groups, you will explore and discuss differences between linear regression and KNN regression.\n",
-    "\n",
-    "We will use the Bias-Variance (**BV**) tradeoff to explain differences and similarities between linear regression and KNN regression, and show that this concept is a useful way to compare regression models.\n",
+    "The Bias-Variance tradeoff will be introduced and used to compare LR and KNN regression to one another.\n",
     "\n",
     "# The Goal\n",
     "The goal of this class is to give a brief tour of statistical methodology, and show how to approach and understand new statistical models. "
@@ -83,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
