--- a/GuidingPrinciplesForRegression.ipynb
+++ b/GuidingPrinciplesForRegression.ipynb
@@ -224,6 +224,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "fig,axs = plt.subplots(2,2)\n",
     "\n",
     "ax = axs[0,0]\n",
